--- a/config/database.yml
+++ b/config/database.yml
@@ -79,8 +79,6 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-production:
+ production:
   <<: *default
-  database: keja_production
-  username: keja
-  password: <%= ENV["KEJA_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
